week-3 work feature engineering completed

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -1329,8 +1329,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "b7ec9071-15d1-4eb9-839b-c9886323373d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('<M8[ns]')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"date\"].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7694d2d-1253-4977-820e-665c70d4a02e",
    "metadata": {},
    "outputs": [],
    "source": []
